k8s/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service-external
  namespace: wisecow
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - port: 4499
    targetPort: 4499
    protocol: TCP
    name: http
  type: LoadBalancer
  externalTrafficPolicy: Local
