k8s/service-private-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service-private
  namespace: wisecow
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - port: 4499
    targetPort: 4499
    protocol: TCP
    name: http
  type: NodePort
  externalIPs:
  - 192.168.0.114
