k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - name: http
      port: 80         # exposed to ingress
      targetPort: 4499 # pod port
  type: ClusterIP
